-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
4.8.0, 5.3.1, 5.10, 5.15.7
-
None
-
Windows7, Mac.
-
-
8b8437489 (dev), 90a16c3f7 (6.4), 20e280ddb (6.5), 09c3cd850 (dev), 3282d501e (tqtc/lts-6.2), 9dea40363 (6.5), 2c4fac4a3 (6.4), 52f8fd2e6 (tqtc/lts-6.2)
QScrollBar in QPlainTextEdit does not emit signal in all the cases. If Page Up/Dn is hit or mouse is clicked in the scrollbar's gutter region.
Following example demonstrate the issue if hit page up/dn key or click the mouse in region.
#include <QtGui> class myPlainTextEdit:public QPlainTextEdit { Q_OBJECT public: myPlainTextEdit(QWidget *parent=0) { QString s; for (int i=0; i<1000; i++) s += QString("Line #%1\n").arg(i); setPlainText(s); connect(verticalScrollBar(),SIGNAL(valueChanged(int)),this,SLOT(myScrollBarSlot(int))); } public slots: void myScrollBarSlot(int value) { qDebug()<<"changed value ="<<value; } }; #include "main.moc" int main(int argc, char ** argv) { QApplication app(argc, argv); myPlainTextEdit w; w.show(); return app.exec(); }
- relates to
-
QTBUG-8682 QPlainTextEdit: When scrolling vertically using the arrow keys then the valueChanged() signal is not emitted from the vertical scrollbar
-
- Closed
-
For Gerrit Dashboard: QTBUG-25365 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
461010,25 | QPlainTextEdit: Don't block signals on page step | dev | qt/qtbase | Status: MERGED | +2 | 0 |
466278,7 | emit QAbstractSlider::valueChanged() only on value change | dev | qt/qtbase | Status: MERGED | +2 | 0 |
466858,2 | emit QAbstractSlider::valueChanged() only on value change | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
466899,2 | emit QAbstractSlider::valueChanged() only on value change | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
466901,2 | emit QAbstractSlider::valueChanged() only on value change | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
466982,2 | QPlainTextEdit: Don't block signals on page step | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
466983,2 | QPlainTextEdit: Don't block signals on page step | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
466984,2 | QPlainTextEdit: Don't block signals on page step | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |